syntax = "proto3";

package teams;

option go_package = "github.com/alexrudd/lb-teams/domain/teams";

message CreateTeam {
    string user_id = 1;
}

message TeamCreated {
    string user_id = 1;
    string team_id = 2;
}

message JoinTeam {
    string user_id = 1;
    string team_id = 2;
}

message TeamJoined {
    string user_id = 1;
    string team_id = 2;
}

message LeaveTeam {
    string user_id = 1;
}

message TeamLeft {
    string user_id = 1;
    string team_id = 2;
}

message DisbandTeam {
    string user_id = 1;
}

message TeamDisbanded {
    string user_id = 1;
    string team_id = 2;
}